style.scss
/* ... */
#contact {
    text-align: center;

    input, textarea {
        width: 100%;
        height: 3em;
        margin-bottom: 1em;
        padding: 0.5em;
        font-size: 14px;
        border: 1px solid $outlineColor;

        &:disabled {
            background-color: $lightGrey;
        }
    }

    textarea {
        height: 126px;
    }

    form {
        width: 700px;
        margin: auto;
        position: relative;
        top: 50%;
        transform: translateY(-50%);
    }

    #submit {
        float: right;
        color: $greyText;

        &:hover {
            color: $darkBlue;
        }

        &.disabled {
            text-shadow: none;
            color: $greyText;
            pointer-events: none;
        }
    }
    
}

.profile {
    border-right: 1px solid $lightGrey;
    padding: 2%;
    height: 100%;
    background-color: $lightGrey;
    transition: background-color $button-transistion-duration ease-in-out;
    position: relative;
    z-index: 10;

    &.mobile-hidden {
        background-color: transparent;
        pointer-events: none;

        @media (min-width: 768px) {
            pointer-events: initial;
        }
    }

    h3 {
        height: auto;

        margin: 0;
        color: $darkGrey;
        width: 100%;
        text-align: center;
    }
    p {
        height: auto;
        width: 100%;
        text-align: center;
        color: $darkGrey;
    }

    .contact {
        position: absolute;
        bottom: 10px;
        margin-left: 0;
        text-align: center;

        width: 100%;

        a {
            padding: 0;
            margin-left: 0;
            margin-bottom: 20px;
        }
        #contact-button {
            position: relative;
            top: -10px;
        }
    }

    @media (min-width: 768px) {
        position: fixed;
        width: $sidebar-width;
        height: 100%;
        padding: 0;
        h3 {
            text-align: center;
            float: none;
            width: 100%;
            margin-top: 0;
        }
        p {
            margin-top: -1.3em;
            font-size: 16px;
            text-align: center;
            letter-spacing: 2px;
        }
        .img-circle {
            height: auto;
            width: 55%;
            margin-top: 25%;
            margin-left: 24%;
        }

    }
}

.gallery-nav {
  margin: 0 auto 30px;
  text-align: center;
  display: table;
  border-spacing: 8px;
  
    li {
        float: none;
        display: table-row;
        
        padding: 5px 10px;

        >a {
            display: table-cell;
            // border: 1px solid #bbb;
            padding-left: 16px;
            padding-right: 16px;
        }
        &.current a {
            // border: 1px solid rgb(0,0,128);
            color: rgb(0,0,128);
        }
    }
    
}
// ::-webkit-scrollbar {
//     -webkit-appearance: none;
//     width: 7px;
//     height: 0;
// }
// ::-webkit-scrollbar-thumb {
//     border-radius: 4px;
//     background-color: rgba(0,0,0,.5);
//     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
// }
.gallery-wrapper {
    // display: table;
    position: absolute;
    top: 0;
    left: 20%;
    height: 100%;
    width: auto;
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: scroll;
    transform: translate3d(0, 0, 0);
    
    // .gallery {
        
        // vertical-align: top;
        // display: table-row;
        .img-container {
            // display: table-cell;
            display: inline-block;
            width: 90%;
            height: 100%;
            transform: translate3d(0, 0, 0);

            img {
                max-width: 100%;
                max-height: 100%;

                position: relative;
                top: 50%;
                transform: translateY(-50%) translate3d(0, 0, 0);
            }
        }

        
    // }   
}



//OLD STYLES
.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}

html,
body {
    margin: 0;
    padding: 0;
    @media (min-width: 768px) {
        // overflow: hidden;
    }
    height: 100%;
}

html {
    font-family: $source-sans;
    font-size: 18px;
    font-weight: 300;
    line-height: 1.6;
    @media (min-width: 768px) {
        font-size: 20px;
    }
}

body {
    color: #515151;
    background-color: #FAFAFA;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

a {
    text-decoration: none;
    transition: all 0.3s;
}

h1 {
    font-size: 2rem;
}

h2 {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;
    font-weight: 800;
    font-size: 1.6rem;
}

h3 {
    font-size: 1.3rem;
}

h4,
h5,
h6 {
    font-size: 1rem;
}

p {
    margin: 0 0 1rem;
}

ul,
ol,
dl {
    // margin-left: 1.5rem;
}

dt {
    font-weight: bold;
}

dd {
    margin-bottom: .5rem;
}

ul {
    display: inline;
    list-style: inside circle;
    padding-left: 0;
    li {
        margin-bottom: .25rem;
    }
    ul,
    ol {
        margin-top: .25rem;
        margin-bottom: .5rem;
    }
}

ol {
    list-style: inside decimal;
    padding-left: 0;
    li {
        margin-bottom: .25rem;
    }
    ul,
    ol {
        margin-top: .25rem;
        margin-bottom: .5rem;
    }
}

p + h1,
p + h2,
p + h3,
ul + h1,
ul + h2,
ul + h3,
ol + h1,
ol + h2,
ol + h3 {
    margin-top: 1.5rem;
}

hr {
    border: 0;
    border-top: .5px solid #eee;
    border-bottom: .5px solid #eee;
    margin: 1.5rem auto;
}

strong {
    color: #333;
    font-weight: 600;
}

abbr {
    font-size: 85%;
    font-weight: bold;
    color: #555;
    text-transform: uppercase;
}

abbr[title] {
    cursor: help;
    border-bottom: 1px dotted #e5e5e5;
}

blockquote {
    padding: 0 0 0 1.5rem;
    margin: 0 2rem 1rem 0;
    color: #999;
    border-left: .5rem solid #e5e5e5;
    p:last-child {
        margin-bottom: 0;
    }
}
/* ... */

